[package]
name = "mysatsolver"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13"
dimacs = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }
cpu-time = "1.0"
simple_logger = "1.6"
sattrait = { path = "sattrait" }
hprof = "0.1"

[profile.release]
lto = true

[features]
default = ["trace"]
trace = []
