[package]
name = "idl"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpllt = { path = "../dpllt" }
smallvec = "1.3"
satcoder = { path = "../satcoder" }
sattrait = { path = "../sattrait" }
hprof = "0.1"

[dev-dependencies]
itertools = "0.9"
rc2 = { path = "../rc2" }
