[package]
name = "rc2"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sattrait = { path = "../sattrait" }
totalizer = { path = "../totalizer" }

[dev-dependencies]
minisat = { path = "../../minisat-rs" }
