[package]
name = "satcoder"
version = "0.2.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[features]
solver_minisat = ["minisat"]
solver_cadical = ["cadical"]
default = ["solver_minisat", "solver_cadical"]

[dependencies]
minisat = { path = "../../minisat-rs", optional = true }
cadical = { version = "0.1", optional = true }
dpllt = { path = "../dpllt" }
itertools = { version = "0.10" }


