[package]
name = "satcoder"
version = "0.2.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

[features]
solver_minisat = ["minisat"]
solver_cadical = ["cadical"]
default = ["solver_minisat", "solver_cadical"]

[dependencies]
cadical = { version = "0.1", optional = true }
minisat = { git = "https://github.com/luteberget/minisat-rs.git", rev = "e564f1177f0f8290d68e2346c7d4fa931f50da04", optional = true }
dpllt = { path = "../dpllt" }
itertools = { version = "0.10" }


