[package]
name = "scheduleopt"
version = "0.1.0"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.4"
sattrait = { path = "../sattrait" }
dpllt = { path = "../dpllt" }
hprof = "0.1"
log = "0.4"

[dev-dependencies]
itertools = "0.9"
rc2 = { path = "../rc2" }
quickcheck = "0.9"
rand = "0.7"

